Added models and updated migrations

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
 		"psr-4" : {
 			"Database\\Factories\\" : "database/factories/",
 			"Database\\Seeders\\" : "database/seeders/",
-			"Hullick\\" : "app/"
+			"App\\" : "app/"
 		}
 	},
 	"autoload-dev" : {
