Created testing environment, a exception to a runner trying to subscribe in a race with date occurrence conflicting with another than has already subscribed, observers, database for testing and unit tests.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,11 +23,22 @@ services:
         container_name: deliver-it-db
         image: 'mysql:8.0'
         environment:
-            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
             MYSQL_DATABASE: '${DB_DATABASE}'
             MYSQL_USER: '${DB_USERNAME}'
             MYSQL_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+            MYSQL_ALLOW_EMPTY_PASSWORD: 'no'
+        networks:
+            - deliver-it-network
+        healthcheck:
+          test: ["CMD", "mysqladmin", "ping"]
+    mysql-tst:
+        container_name: deliver-it-db-tst
+        image: 'mysql:8.0'
+        environment:
+            MYSQL_DATABASE: '${DB_DATABASE}'
+            MYSQL_USER: '${DB_USERNAME}'
+            MYSQL_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_ALLOW_EMPTY_PASSWORD: 'no'
         networks:
             - deliver-it-network
         healthcheck:
